# Project_Sullivan

./: .colab_ssh_config  .colab_ssh_guide.sh  .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  BASELINE_COMPLETE.md  COLAB_QUICK_START.md  COLAB_SETUP_CHECKLIST.md  DATASET_INTEGRATION_REPORT.md  DATASET_USAGE_GUIDE.md  ENVIRONMENT_SETUP_REQUIRED.md  MILESTONE_PROGRESS_REPORT.md  PREPROCESSING_ROADMAP.md  PROJECT_STATUS_REPORT.md  README.md  SEGMENTATION_TEST_REPORT.md  STATUS_AND_NEXT_STEPS.md  STATUS_REPORT_20251129.md  STATUS_REPORT_20251130.md  STATUS_REPORT_20260111.md  TRAINING_IN_PROGRESS.md  UNET_TRAINING_FINAL_REPORT.md  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  researcher_manual.md  test_new_dataset.py  test_real_data.py  test_transformer_simple.py
configs/: baseline_config.yaml  baseline_quick_test.yaml  colab_gdrive_config.yaml  preprocess.yaml  transformer_config.yaml  transformer_cpu_test.yaml  transformer_quick_test.yaml  transformer_small.yaml
data/: README.md
data/processed/aligned/: batch_summary.json  preprocessing_report.json
data/processed/aligned/sub001/: sub001_2drt_01_vcv1_r1_video_metadata.json  sub001_2drt_01_vcv1_r2_video_metadata.json  sub001_2drt_02_vcv2_r1_video_metadata.json  sub001_2drt_02_vcv2_r2_video_metadata.json  summary.json  (+28 more)
data/processed/phase2_test/: dataset_info.json  test_samples.json  train_samples.json  val_samples.json
data/processed/pseudo_labels/: generation_summary.json
data/processed/test_batch/: batch_summary.json
data/raw/: recommended_subjects.json  usc_timit_data
data/raw/Download_data/: Stimuli.pptx  Subjects.xlsx
docs/: ARCHIVE_INDEX.md  BASELINE_PERFORMANCE_REPORT.md  COLAB_LARGE_DATASET_GUIDE.md  COLAB_TRAINING_GUIDE.md  DATA_DOWNLOAD_GUIDE.md  M1_COMPLETION_REPORT.md  METHODOLOGY_SEGMENTATION_PIPELINE.md  NEXT_MILESTONES.md  PHASE2_SETUP_COMPLETE.md  PROJECT_OVERVIEW.md  PROJECT_SULLIVAN_SEGMENTATION_COMPLETE.md  QUICK_START_GDRIVE.md  UNET_EVALUATION_RESULTS.md  dataset_statistics.json
logs/: README.md
models/: README.md
notebooks/: 01_EDA.ipynb  Project_Sullivan_Transformer_Training.ipynb  Sullivan_GDrive_Training.ipynb
results/: COLAB_TRAINING_ISSUE_ANALYSIS.md  README.md  SEQUENCE_SPLITTING_FAILURE_ANALYSIS.md
results/colab_runs/: COLAB_TRAINING_ANALYSIS.md
results/unet_evaluation/: evaluation_results.json
scripts/: batch_preprocess.py  check_training_status.sh  check_unet_progress.sh  colab_cli.sh  colab_connect.sh  colab_setup_cell.py  collect_dataset_stats.py  create_dataset_splits.py  create_phase2_test_data.py  evaluate_unet.py  extract_articulatory_params.py  extract_audio_features.py  extract_gdrive_dataset.py  gdrive_sync.sh  generate_pseudo_labels.py  inspect_samples.py  monitor_progress.py  monitor_training_simple.sh  prepare_data_for_colab.sh  segment_full_dataset.py  segment_subset.py  shard_dataset.py  start_tensorboard.sh  test_preprocessing_pipeline.py  test_pretrained_unet.py  train_baseline.py  train_phase2.py  train_transformer.py  train_unet.py  visualize_alignment.py
src/: __init__.py
src/audio_features/: __init__.py  mel_spectrogram.py  mfcc.py
src/modeling/: __init__.py  audio_features.py  baseline_lstm.py  dataset.py  evaluate.py  losses.py  model_utils.py  positional_encoding.py  transformer.py
src/modeling/models/: __init__.py  bilstm.py
src/parameter_extraction/: __init__.py  geometric_features.py  pca_features.py
src/pipeline/: __init__.py
src/preprocessing/: __init__.py  alignment.py  data_loader.py  denoising.py  parameter_extraction.py
src/segmentation/: __init__.py  dataset.py  traditional_cv.py  unet.py
src/utils/: __init__.py  config.py  io_utils.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_data_loader.py
tests/unit/: __init__.py  test_alignment.py  test_config.py  test_denoising.py  test_io_utils.py  test_logger.py
tests/validation/: __init__.py
(+462 files in other folders)
